inf-gw-lab/gw-raw/gemma-3-1b.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-gemma-3-1b
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vllm-gemma-3-1b
  template:
    metadata:
      labels:
        app: vllm-gemma-3-1b
    spec:
      serviceAccountName: default
      containers:
        - name: inference-server
          image: vllm/vllm-openai:v0.8.5.post1
          resources:
            requests:
              cpu: "2"
              memory: "25Gi"
              ephemeral-storage: 10Gi
              nvidia.com/gpu: "1"
            limits:
              cpu: "2"
              memory: "25Gi"
              ephemeral-storage: 10Gi
              nvidia.com/gpu: "1"
          args:
            - --model=google/gemma-3-1b-it
            - --tensor-parallel-size=1
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          lifecycle:
            preStop:
              sleep:
                seconds: 30
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3600
            initialDelaySeconds: 2
            periodSeconds: 1
            httpGet:
              path: /health
              port: http
              scheme: HTTP
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-gemma-3-1b
spec:
  selector:
    app: vllm-gemma-3-1b
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: vllm-gemma-3-1b
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: vllm-gemma-3-1b
#   minReplicas: 1
#   maxReplicas: 2
#   behavior:
#     scaleDown:
#       stabilizationWindowSeconds: 60
#   metrics:
#     - type: External
#       external:
#         metric:
#           name: prometheus.googleapis.com|inference_pool_average_kv_cache_utilization|gauge
#           selector:
#             matchLabels:
#               metric.labels.name: vllm-gemma-3-1b
#         target:
#           type: AverageValue
#           averageValue: 10m
