inf-gw-lab/gw-raw/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: xlb
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
    - protocol: HTTP
      port: 80
      name: http
